[gd_scene load_steps=11 format=3 uid="uid://t13h28qs4lvp"]

[ext_resource type="Script" path="res://nodos/section 1/enemies/jump_enemy/jump_enemy.gd" id="1_b4o2j"]
[ext_resource type="Texture2D" uid="uid://bqh0w6153q0gf" path="res://arte/Assets/prota.png" id="2_cceq3"]
[ext_resource type="Script" path="res://nodos/section 1/enemies/jump_enemy/state_machine_jump_enemy.gd" id="5_lr5ei"]
[ext_resource type="Script" path="res://nodos/section 1/enemies/jump_enemy/idle_state_jump_enemy.gd" id="6_1gdfo"]
[ext_resource type="Script" path="res://nodos/section 1/enemies/jump_enemy/hitted_state_jump_enemy.gd" id="6_34jai"]
[ext_resource type="Script" path="res://nodos/section 1/enemies/jump_enemy/hitbox.gd" id="6_57g2g"]
[ext_resource type="Script" path="res://nodos/section 1/enemies/jump_enemy/dead_state_jump_enemy.gd" id="7_l551g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idrms"]
height = 86.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2ss1"]
size = Vector2(12.7643, 14.535)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_38qlt"]
radius = 30.0
height = 86.0

[node name="jump_enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 41
script = ExtResource("1_b4o2j")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.35641, 0.35641)
texture = ExtResource("2_cceq3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_idrms")

[node name="jump_cd" type="Timer" parent="."]
one_shot = true

[node name="collision query" type="Area2D" parent="."]
position = Vector2(35.7601, 48.8868)
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision query"]
position = Vector2(-0.000244141, 0.000183105)
shape = SubResource("RectangleShape2D_n2ss1")
debug_color = Color(0.858824, 0.360784, 0.109804, 0.419608)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(35, 1)
target_position = Vector2(0, 1000)
collision_mask = 8

[node name="state_machine_jump_enemy" type="Node" parent="." node_paths=PackedStringArray("initial_state", "Enemigo")]
script = ExtResource("5_lr5ei")
initial_state = NodePath("idle_state_jump_enemy")
Enemigo = NodePath("..")

[node name="idle_state_jump_enemy" type="Node" parent="state_machine_jump_enemy"]
script = ExtResource("6_1gdfo")

[node name="dead_state_jump_enemy" type="Node" parent="state_machine_jump_enemy" node_paths=PackedStringArray("corpse_timer")]
script = ExtResource("7_l551g")
corpse_timer = NodePath("../../corpse_timer")

[node name="hitted_state_jump_enemy" type="Node" parent="state_machine_jump_enemy" node_paths=PackedStringArray("hitted_timer")]
script = ExtResource("6_34jai")
hitted_timer = NodePath("../../hitted_timer")

[node name="corpse_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 33
script = ExtResource("6_57g2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_38qlt")
debug_color = Color(0.788235, 0.368627, 0.596078, 0.419608)

[node name="hitted_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="body_exited" from="collision query" to="state_machine_jump_enemy/idle_state_jump_enemy" method="_on_collision_query_body_exited"]
